# designPatterns

./: CMakeLists.txt
commandPattern/: CMakeLists.txt
commandPattern/src/: ICommand.hpp  main.cpp
commandPattern/src/Invoker/: RemoteControl.hpp
commandPattern/src/Receiver/: Light.hpp  LightOffCmd.hpp  LightOnCmd.hpp
factoryPattern/: CMakeLists.txt
factoryPattern/src/: main.cpp
factoryPattern/src/Creator/: ChicagoPizzaStore.hpp  IPizzaStore.hpp  NYPizzaStore.hpp
factoryPattern/src/Product/: ChicagoStylePizza.hpp  IPizza.hpp  NYStylePizza.hpp
observerPattern/: CMakeLists.txt
observerPattern/src/: main.cpp
observerPattern/src/ConcreteObservers/: CurrentConditionDisplay.hpp  StatisticsDisplay.hpp
observerPattern/src/ConcreteSubject/: WeatherData.hpp
observerPattern/src/Observer/: IObserver.hpp
observerPattern/src/Subject/: ISubject.hpp
strategyPattern/: CMakeLists.txt
strategyPattern/doc/: Doxyfile
strategyPattern/src/: main.cpp
strategyPattern/src/Client/: Duck.hpp
strategyPattern/src/Duck/: FlyNoWay.hpp  FlyWithWings.hpp  IFlyBehavior.hpp  MallardDuck.hpp  RubberDuck.hpp
